[package]
name = "samsonr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
config = "0.11"
dirs = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
prettytable-rs = "^0.8"
simplelog = "^0.10.0"
log = "0.4.0"
# env_logger = "0.8.4"

# [dev-dependencies]
# assert_cmd = "1"
# predicates = "1"
